; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libkern/extr_kernel_mach_header.c_getuuidfromheader.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libkern/extr_kernel_mach_header.c_getuuidfromheader.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uuid_command = type { i8* }

@LC_UUID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @getuuidfromheader(i32* %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i64*, align 8
  %6 = alloca %struct.uuid_command*, align 8
  store i32* %0, i32** %4, align 8
  store i64* %1, i64** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* @LC_UUID, align 4
  %9 = call i64 @getcommandfromheader(i32* %7, i32 %8)
  %10 = inttoptr i64 %9 to %struct.uuid_command*
  store %struct.uuid_command* %10, %struct.uuid_command** %6, align 8
  %11 = load %struct.uuid_command*, %struct.uuid_command** %6, align 8
  %12 = icmp ne %struct.uuid_command* %11, null
  br i1 %12, label %13, label %22

13:                                               ; preds = %2
  %14 = load i64*, i64** %5, align 8
  %15 = icmp ne i64* %14, null
  br i1 %15, label %16, label %18

16:                                               ; preds = %13
  %17 = load i64*, i64** %5, align 8
  store i64 8, i64* %17, align 8
  br label %18

18:                                               ; preds = %16, %13
  %19 = load %struct.uuid_command*, %struct.uuid_command** %6, align 8
  %20 = getelementptr inbounds %struct.uuid_command, %struct.uuid_command* %19, i32 0, i32 0
  %21 = load i8*, i8** %20, align 8
  store i8* %21, i8** %3, align 8
  br label %23

22:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %23

23:                                               ; preds = %22, %18
  %24 = load i8*, i8** %3, align 8
  ret i8* %24
}

declare dso_local i64 @getcommandfromheader(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
